# image_viewer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh  build_opencv.sh  build_opencv_windows.sh  download_opencv.sh
src/: image_viewer.cpp  image_viewer.hpp  main.cpp
